se agrega archivo config para credenciales

--- a/preentrega_1/preentrega_pedro_toledo.ipynb
+++ b/preentrega_1/preentrega_pedro_toledo.ipynb
@@ -75,11 +75,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2020-01-05 13:42:28.420821</td>\n",
-       "      <td>zaBJtyEuTrKeA4QnShNsog</td>\n",
-       "      <td>https://api.chucknorris.io/jokes/zaBJtyEuTrKeA...</td>\n",
-       "      <td>Chuck Norris was born :December 32nd</td>\n",
-       "      <td>2024-05-07 22:24:40.383902</td>\n",
+       "      <td>2020-01-05 13:42:23.880601</td>\n",
+       "      <td>vj0xoCxARX-BdVxH_NsaPQ</td>\n",
+       "      <td>https://api.chucknorris.io/jokes/vj0xoCxARX-Bd...</td>\n",
+       "      <td>Chuck Norris is so fast, he can run around the...</td>\n",
+       "      <td>2024-05-14 14:55:27.568224</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -87,13 +87,16 @@
       ],
       "text/plain": [
        "                   created_at                      id  \\\n",
-       "0  2020-01-05 13:42:28.420821  zaBJtyEuTrKeA4QnShNsog   \n",
+       "0  2020-01-05 13:42:23.880601  vj0xoCxARX-BdVxH_NsaPQ   \n",
        "\n",
        "                                                 url  \\\n",
-       "0  https://api.chucknorris.io/jokes/zaBJtyEuTrKeA...   \n",
+       "0  https://api.chucknorris.io/jokes/vj0xoCxARX-Bd...   \n",
        "\n",
-       "                                  value            fecha_insercion  \n",
-       "0  Chuck Norris was born :December 32nd 2024-05-07 22:24:40.383902  "
+       "                                               value  \\\n",
+       "0  Chuck Norris is so fast, he can run around the...   \n",
+       "\n",
+       "             fecha_insercion  \n",
+       "0 2024-05-14 14:55:27.568224  "
       ]
      },
      "execution_count": 3,
@@ -121,16 +124,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "user = 'ptoledor_coderhouse'\n",
-    "passw = 'Oyd0K639G3'\n",
-    "host = 'data-engineer-cluster.cyhh5bfevlmn.us-east-1.redshift.amazonaws.com'\n",
-    "port = '5439'\n",
-    "database = 'data-engineer-database'\n",
-    "schema = 'ptoledor_coderhouse'"
+    "import config\n",
+    "user = config.user\n",
+    "passw = config.passw\n",
+    "host = config.host\n",
+    "port = config.port\n",
+    "database = config.database\n",
+    "schema = config.schema"
    ]
   },
   {
@@ -218,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
